# fdpo-ros-stack

./: README.md
beacon_detector/: CMakeLists.txt  package.xml
beacon_detector/include/: beacon_detector_node.h  cluster.h  dbscan.h  point.h
beacon_detector/launch/: beacons_info.yaml  run_beacon_detector.launch
beacon_detector/msg/: BeaconMatch.msg  Cluster.msg
beacon_detector/src/: beacon_detector_node.cpp  cluster.cpp  dbscan.cpp  main.cpp  point.cpp
conf/: CMakeLists.txt  package.xml
conf/launch/hardware/: hlds_laser.launch  lidar_selector.launch  pi_pico_driver.launch
conf/launch/hmi/: fdpo_beacons_viz.launch  fdpo_map_server.launch  fdpo_path_viewer.launch  fdpo_reconfigure_rqt.launch  fdpo_rviz.launch  fdpo_simulation.rviz  teleop_keyboard.launch  teleop_rqt_steering.launch
conf/launch/hmi/maps/: factory_map.yaml
conf/launch/navigation/localizer/: README_ekf_params.md  ekf_params.yaml
conf/launch/navigation/localizer/beacon_detector/: beacons_info.yaml  matching_params.yaml  run_beacon_detector.launch
conf/launch/navigation/localizer/ekf_localizer/: run_ekf_localizer.launch
conf/launch/navigation/navigation_controller/: navigation_parameters.yaml  route.yaml  run_navigation_controller.launch
conf/script/: record_lidar.bash  wake_up_fdpo.launch
conf/system/: hal.xml  hmi.xml  navigation.xml
drivers_stack/lidar_drivers/ydlidar_x4_drivers/5dpo_driver_laser_2d/src/sdpo_driver_laser_2d/: SdpoDriverLaser2DROS.cpp
drivers_stack/pi_pico_driver/: CMakeLists.txt  package.xml
drivers_stack/pi_pico_driver/include/: pico_driver_node.h
drivers_stack/pi_pico_driver/src/: main.cpp  pico_driver_node.cpp
localizer/: CMakeLists.txt  package.xml
localizer/include/: localizer_node.h
localizer/include/beacon_detector/: beacon_detector_node.h
localizer/include/ekf_localizer/: localizer_node.h
localizer/include/general/: beacon.h  cluster.h
localizer/launch/beacon_detector/: matching_params.yaml  run_beacon_detector.launch
localizer/launch/ekf_localizer/: run_ekf_localizer.launch
localizer/msg/: BeaconMatch.msg
localizer/src/: localizer_node.cpp  main.cpp
localizer/src/beacon_detector/: beacon_detector_node.cpp  main.cpp
localizer/src/ekf_localizer/: localizer_node.cpp  main.cpp
localizer/src/general/: cluster.cpp  point.cpp
navigation_controller/: CMakeLists.txt  package.xml
navigation_controller/cfg/: Navigation.cfg
navigation_controller/include/: fsm.h  navigation_controller_node.h
navigation_controller/launch/: navigation_parameters.yaml  route.yaml  run_navigation_controller.launch
navigation_controller/src/: fsm.cpp  navigation_controller_node.cpp
navigation_stack/localizer/: package.xml
navigation_stack/localizer/include/beacon_detector/: beacon_detector_node.h  dbscan.h
navigation_stack/localizer/include/ekf_localizer/: localizer_node.h
navigation_stack/localizer/include/general/: pose.h
navigation_stack/localizer/launch/beacon_detector/: run_beacon_detector.launch
navigation_stack/localizer/src/beacon_detector/: beacon_detector_node.cpp  dbscan.cpp  main.cpp
navigation_stack/localizer/src/ekf_localizer/: localizer_node.cpp
navigation_stack/navigation_controller/: CMakeLists.txt
navigation_stack/navigation_controller/cfg/: Navigation.cfg
navigation_stack/navigation_controller/include/: navigation_controller_node.h
navigation_stack/navigation_controller/src/: main.cpp  navigation_controller_node.cpp
navigation_stack/navigation_controller/srv/: NavigationControl.srv
path_log/: package.xml
simulation_stage/hmi/rviz/: fdpo_simulation.rviz
simulation_stage/launch/: beacon_pose_simulation.launch  run_simulation_stage.launch  run_system.launch  run_without_localizer.launch  trajectory_controller_simulation.launch
simulation_stage/worlds/: factory_floor.world
usefull_tools/path_log/src/: odoms_to_paths_node.cpp
usefull_tools/simulation_stage/worlds/: factory_floor.world
usefull_tools/viz_beacon/src/: viz_mux_node.cpp
utilities_stack/path_log/: CMakeLists.txt
utilities_stack/pointcloud_converter/: CMakeLists.txt  package.xml
utilities_stack/pointcloud_converter/scripts/: pointcloud_to_pointcloud2.py
utilities_stack/simulation_stage/: CMakeLists.txt  package.xml
utilities_stack/simulation_stage/launch/: run_sim_stage.launch
utilities_stack/simulation_stage/worlds/: factory_floor.world
utilities_stack/viz_beacon/: CMakeLists.txt  package.xml
utilities_stack/viz_beacon/src/: viz_mux_node.cpp
