<?xml version="1.0"?>
<package format="2">
  <name>beacon_detector</name>
  <version>0.0.1</version>
  <description>Beacon detector: LaserScan → PointCloud2 + TF2</description>

  <maintainer email="afonso@todo.todo">afonso</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>xmlrpcpp</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export/>
</package>
