<?xml version="1.0"?>
<package format="2">
  <name>conf</name>
  <version>0.1.0</version>
  <description>Centralized configuration and launch wrappers for the FDPO stack.</description>

  <maintainer email="afonso@todo.todo">afonso</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export/>
</package>
