<?xml version="1.0"?>
<package format="2">
  <name>localizer</name>
  <version>0.0.1</version>
  <description>Localizer: subscreve /beacon_stimation e imprime valores</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>beacon_detector</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>beacon_detector</exec_depend>
</package>
