<?xml version="1.0"?>
<package format="2">
  <name>localizer</name>
  <version>0.0.1</version>
  <description>EKF-based beacon localizer node</description>

  <maintainer email="teu.email@exemplo.com">O Teu Nome</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependências principais -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>beacon_detector</depend>

  <!-- Eigen -->
  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>

</package>
