<?xml version="1.0"?>
<package format="2">
  <name>navigation_controller</name>
  <version>0.0.1</version>
  <description>Simple local navigation controller (GoToXY + SetTheta)</description>

  <maintainer email="afonso@todo.todo">afonso</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- deps normais -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- geração de mensagens/serviços -->
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <export/>
</package>
