<?xml version="1.0"?>
<package format="2">
  <name>odom_path_tools</name>
  <version>0.0.1</version>
  <description>Publica Path/Line a partir de /odometry/filtered, /odom e /base_pose_ground_truth</description>
  <maintainer email="tu@exemplo.com">Tu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
