<package format="2">
  <name>localizer</name>
  <version>0.0.1</version>
  <description>EKF-based beacon localizer node</description>

  <maintainer email="afonso@gmail.com">...</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependências de runtime (e build) -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>     
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>laser_geometry</depend>

  <!-- Mensagens -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- (Opcional) Eigen via CMake -->
  <build_depend>eigen3</build_depend>
  <exec_depend>eigen3</exec_depend>
</package>
